# Copyright 2026 Terradue
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This workflow will install Python dependencies, run tests and lint with a single version of Python
# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python

import json
from collections.abc import Mapping
from typing import Any, TextIO

from . import StreamHandler


class JsonHandler(StreamHandler):
    def handle(self, stream: TextIO) -> Mapping[str, Any] | list[Mapping[str, Any]]:
        return json.load(stream)

    def write(
        self, configuration: Mapping[str, Any] | list[Mapping[str, Any]], stream: TextIO
    ) -> None:
        json.dump(configuration, stream, indent=True)
